<resources>
    <string name="app_name">Swasthya</string>
    <string name="LOGO">SWASTHYA</string>
    <string name="dummyShortText">Travel delhi like never before. Although there are shaded areas in the complex but it is always good to carry sunscreen or sunglasses especially during summer.</string>
    <string name="terms_text">By signing up you agree to our Terms of Use, Privacy Policy and Rules.</string>
    <string name="privacy">Before signing in make sure you agree to our Terms and Conditions and Privacy Policy.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_tips">1. उन चीजो को ना करे जिन्हें आप करना पसंद ही नही करते. ज़िन्दगी बदलती है और आपको भी बदलते रहना है. यदि आप कोई काम अब और नही करना चाहते तो उसे करना छोड़ दीजिये. (भले ही ऐसा करने में थोडा समय लग सकता है.)

\n\n2. एक समय में एक ही काम करे. ऐसा करते समय आपको अच्छा परिणाम मिलेगा और आप अच्छा महसुस करोगे और कम दुःखी होंगे.

3. हर रविवार को कम से कम 10 से 15 मिनट पुरे सप्ताह की प्लानिंग करने में बिताये. उस समय में अपने पुरे सप्ताह के प्लान के बारे में लिखे, अपनी टू-डू-लिस्ट को देखकर उस हिसाब से तैयारी करे. इससे आप अपने कामो को पूर्णता से कर सकते हो, ऐसा करने से आप अपने सारे काम बिना किसी चिंता के आराम से कर सकोगे.
\n\n
4. सभी खाद्य सामग्री की शॉपिंग सप्ताह में एक ही बार करे. इससे आप अपना समय, ऊर्जा और पैसे भी बचा सकते हो.
\n\n
5. जब आप दुःखी हो, किसी समस्या में हो या अपने भुत-भविष्य की चिंता कर रहे हो तो बैली (Belly) से 2 मिनट तक लंबी साँस ले और जो हवा अंदर-बाहर हो रही है केवल उसी पर ध्यान दे. इससे आपका शरीर शांत रहेगा और आपके दिमाग को दोबारा वर्तमान पल में लायेगा.
\n\n
6. चीजो को पूर्णता से करने को कोशिश न करे. आप चीजो को अच्छी तरह से कर सकते हो और जब अच्छी तरह से कर सकते हो तब आपको जरूर करते रहना चाहिये. चीजे जिन रास्तो में पूरी होती है उन्ही वही पूरा होने दे, उनका रास्ता बदलकर पूर्णता से करने की कोशिश न करे.
\n\n
7. दिन में एक बार सभी की जाँच करे. मैं अपने ईमेल इनबॉक्स, ब्लॉग स्टॅटिस्टिक, ऑनलाइन अर्निंग, ट्विटर और फेसबुक को दिन में सिर्फ एक ही बार देखता हु. मेरे कार्य समय के खत्म होते ही हम इन सभी को देखता हु क्योकि मैं कभी अपनी ऊर्जा और ध्यान को व्यर्थ नही गवाता.
\n\n
8. रोज़ छोटे दयालुता भरे एक्ट का चुनाव करे. आलोचना भरे कामो को रकने से अच्छा दयालुता भरे एक्ट में अभिनय करे.
\n\n
9. उन चीजो को फेंक दे जिनका पिछले 1 साल से आपने उपयोग न किया हो. जो चीजे आपके पास है उन्ही के बल पर आगे बढे और अपनेआप से पूछे की क्या पिछले साल उन चीजो का उपयोग किया था. यदि नही तो उन्हें किसी और को या फिर अपने दोस्त को दे दे या फेंक दे.
\n\n
10. रोज़ अपनेआप से एक सरल प्रश्न पूछे. प्रश्न जैसे की, “अभी कौनसी महत्वपूर्ण चीज है जो मै कर सकता हु?” और “परिस्थिति को सरल बनाने के लिये कौनसा छोटा कदम मुझे लेना चाहिये?”.
\n\n
11. चीजो को उन्ही के जगह पर रहने दे. यदि सबकुछ अपनी वास्तविक जगह पर ही रहे तो काम होने पर आपको वो आसानी से मिल जायेंगी.
\n\n
12. उन चीजो के सब्सक्रिप्शन को बंद कर दे जिसे आप बहोत कम पढ़ते या देखते हो.
\n\n
13. छोटे ईमेल लिखे. साधारणतः मैं कम वाक्यो वाले, अक्सर 1 से 5 वाक्यो के ही ईमेल लिखता हु. लेकिन यदि आप छोटे से छोटा ईमेल लिखो तो आप आसानी से बड़ी से बड़ी परिस्थिति को छोटे शब्दों में बयाँ कर सकते हो.
\n\n
14. अनुमान लगाने की बजाये पूछे. दिमाग को पढ़ना काफी मुश्किल है. इसीलिये अंदाज़ा लगाने की बजाये पूछे और बातचीत करे. इससे आप ग़लतफ़हमी, मुश्किलो और नकारात्मकता और समय के व्यर्थ होने से बच सकते हो.
\n\n
15. छोटे से छोटे कार्यस्थल का उपयोग करे. मेरा कार्यस्थल केवल एक लैपटॉप है जो एक छोटे से लकड़ी के टेबल पर रखा हुआ है. जिसपर पीछे की तरफ पानी का गिलास भी रखा होता है. मेरे कार्यस्थल पर मैं, कंप्यूटर और केवल पानी ही होता है.
\n\n
16. सभी को खुश करना बंद करे. क्योकि हम सभी की ज़िन्दगी में ऐसे कुछ लोग जरूर होते है जिन्हें साथ लेकर हम कभी आगे नही बढ़ सकते इसीलिये सभी को खुश करने की कोशिश न करे.</string>
    <string name="_20">स्वस्थ रहने के 20 सूत्र</string>
    <string name="_30">\u00a9 Swasthya</string>
    <string name="_5_min_read_by_surbhi_chaursayia"><u>5 min read | By Sheetal Kumar</u></string>
    <string name="tips">" गुणकारी टिप्स "</string>
    <string name="title_a"> 5 टिप्स सेहत के लिए </string>
    <string name="title_b"> स्वस्थ रहने की 10 अच्छी आदतें </string>
    <string name="title_c"> सुपर फूड्स </string>
    <string name="title_d"> लम्‍बा होना है? तो करिए ये योगासन </string>
    <string name="title_e"> स्वस्थ रहने के नौ टिप्स </string>
    <string name="title_f"> स्वस्थ रहने के 20 सूत्र </string>
    <string name="title_g"> फिट रहना है तो अपनाएं ये छोटे-छोट टिप्‍स </string>
    <string name="heading_a">भारतीय संस्कृति में जीने के कुछ ऐसे तौर-तरीके हैं जिनका हम कई पीढ़ियों से पालन करते आ रहे हैं, जैसे – उपवास करना, उठने और बैठने के ढंग, और पानी भरकर रखने के लिए तांबे के बर्तनों का प्रयोग !</string>
    <string name="heading_b">heading B</string>
    <string name="heading_c">सर्दियों का मौसम आते ही जहां एक ओर मन में उल्‍लास भर उठता है, वहीं दूसरी ओर स्‍वास्‍थ्‍य की दृष्टि से ये मौसम कई बार खतरनाक भी साबित होता है। सर्दियों के मौसम में कई तरह की परेशानियां आती हैं। लेकिन हमारी प्रकृति ने इन समस्याओं से लड़ने के लिए कई चीजें दी हैं, जिनकी मदद से आप सर्दियों में आने वाली समस्‍याओं से बच सकते हैं। ऑरीफ्लेम इंडिया की आहार विशेषज्ञ सोनिया नारंग के मुताबिक, सर्दियों की समस्याओं से निपटने के लिए कुछ सुपरफूड्स बेहद मददगार हो सकते हैं !</string>
    <string name="heading_d">योग में भला क्‍या असंभव है। अगर आप मोटे हैं और पतला होना चाहते हैं, तो संभव है। अगर आप तनाव मुक्‍त होना चाहते हैं, तो ये भी संभव है और अगर आप लम्‍बे होना चाहते हैं, ये भी संभव है। जी हां, अब आप अपनी लम्‍बाई बढ़ाने के लिए अपना सकते हैं योग का रास्‍ता। करना क्‍या है ये हम आपको बताते हैं।
खड़े होकर किया जाने वाला ताड़ासन लम्‍बाई बढ़ाने में मदद करता है और तो और ये असान भी बहुत है। इसे बड़ी ही आसानी से किसी भी उम्र में किया जा सकता है।</string>
    <string name="heading_e">heading e</string>
    <string name="heading_f">दिनचर्या में थोड़ा-सा व आसान परिवर्तन आपको स्वस्थ व दीर्घायु बना सकता है। बशर्ते आप कुछ चीजों को जीवनभर के लिए अपना लें और कुछ त्याज्य चीजों को हमेशा के लिए दूर कर दें। इसके लिए अपनाइए सरल-सा 20 सूत्री जीवन। </string>
    <string name="heading_g">दHeading g</string>
</resources>